Bug fix (card bg color) on iOS devices

--- a/src/components/AmiiboCard/AmiiboCard.module.css
+++ b/src/components/AmiiboCard/AmiiboCard.module.css
@@ -20,6 +20,8 @@
     background-size: 25%;
     background-repeat: repeat;
     background-position: center;
+    color: rgba(0,0,0,0);
+    text-decoration: none;
 }
 
 .myCard:hover {
